# balkan-nlp

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DATASETS.md  LICENSE  README.md  SECURITY.md  TODO.md  pyproject.toml
datasets/clean_text/: README.md  config.yaml  sources.yaml
datasets/language_id/: README.md  config.yaml
datasets/summarization/: README.md  config.yaml
docs/: DATA_SOURCES.md  DECISIONS.md  METHODOLOGY.md  PHASE_1.md  PHASE_2.md  PHASE_3.md  PHASE_4.md
export/: __init__.py  hf_upload.py  to_jsonl.py  to_parquet.py
processing/: __init__.py  cleaning.py  deduplication.py  language_check.py  language_id.py  normalization.py  splitting.py
scraping/: __init__.py  extract.py  fetch.py
scraping/sources/: __init__.py  common.py  wikipedia.py
scripts/: run_clean_text.py  run_language_id.py  upload_only.py
utils/: __init__.py  config.py  hashing.py  logging.py  text_utils.py
